[gd_scene load_steps=4 format=3 uid="uid://b82yl0qyvpbxf"]

[ext_resource type="Script" path="res://game/text/baba.gd" id="1_im5hc"]
[ext_resource type="Script" path="res://game/levels/story_scene.gd" id="1_s56oe"]
[ext_resource type="Texture2D" uid="uid://sdk57026206l" path="res://assets/aseprite/big_sheet.png" id="2_w66o8"]

[node name="Story" type="Node2D"]
script = ExtResource("1_s56oe")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.3
range_layer_min = -10
range_layer_max = 2

[node name="NoName" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="NoName"]
custom_minimum_size = Vector2(900, 0)
offset_left = 396.0
offset_top = 79.0
offset_right = 1296.0
offset_bottom = 687.0
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "An impractical main character has bestowed upon us a curse that blocks us from using any controls.

A brave magician. practically a wizard, somehow managed to partially block the complete annihilation of all controls.
Thanks to the wizard's cunning, 2 buttons still function, we will refer to them from now on as \"A\" and \"B\".

Oh, before we start this story...
I ALWAYS forget!

What was the magic practicioner's name again?"
fit_content = true

[node name="BABANo" type="Node" parent="NoName/RichTextLabel"]
unique_name_in_owner = true
script = ExtResource("1_im5hc")
no_baba = true

[node name="WithName" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="WithName"]
custom_minimum_size = Vector2(900, 0)
offset_left = 396.0
offset_top = 79.0
offset_right = 1296.0
offset_bottom = 687.0
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "An impractical main character has bestowed upon us a curse that blocks us from using any controls.

A brave magician \"PLAYER_NAME\". practically a wizard managed to partially block the complete annihilation of all controls, keeping 2 buttons still functioning, we will refer to them from now on as \"A\" and \"B\".

The very intrepid \"PLAYER_NAME\" now enters the domain of our impractical antagonist - the \"Button Masher\" - seeking to completely break the spell.

Best of Luck, brave \"PLAYER_NAME\"!"
fit_content = true

[node name="BABAWith" type="Node" parent="WithName/RichTextLabel"]
unique_name_in_owner = true
script = ExtResource("1_im5hc")

[node name="AskName" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RichTextLabel" type="RichTextLabel" parent="AskName"]
custom_minimum_size = Vector2(900, 0)
offset_left = 396.0
offset_top = 79.0
offset_right = 1296.0
offset_bottom = 687.0
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 48
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "What is the wizard's Name?"
fit_content = true

[node name="BABAAsk" type="Node" parent="AskName/RichTextLabel"]
unique_name_in_owner = true
script = ExtResource("1_im5hc")
no_baba = true

[node name="NameLine" type="LineEdit" parent="AskName"]
unique_name_in_owner = true
offset_left = 384.0
offset_top = 132.0
offset_right = 880.0
offset_bottom = 192.0
alignment = 1
max_length = 15
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
caret_force_displayed = true

[node name="NameButton" type="Button" parent="AskName"]
unique_name_in_owner = true
offset_left = 532.0
offset_top = 216.0
offset_right = 732.0
offset_bottom = 262.0
text = "Continue"

[node name="BABAButton" type="Node" parent="AskName/NameButton"]
unique_name_in_owner = true
script = ExtResource("1_im5hc")
no_baba = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(192, 504)
scale = Vector2(8, 8)
texture = ExtResource("2_w66o8")
region_enabled = true
region_rect = Rect2(112, 0, 48, 16)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(192, 176)
scale = Vector2(8, 8)
texture = ExtResource("2_w66o8")
region_enabled = true
region_rect = Rect2(112, 16, 48, 16)

[node name="A" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1300, 704)
scale = Vector2(8, 8)
texture = ExtResource("2_w66o8")
region_enabled = true
region_rect = Rect2(160, 0, 16, 16)
